# VSCode-Memory-Manager

./: .gitignore  CMakeLists.txt  README.md  config_file
Extension/: README.md  package-lock.json  package.json
Extension/src/: extension.js
Pruebalib/: CMakeLists.txt  index.js  main.cpp  package-lock.json
Pruebalib/VSPlib/: CountVSPtrs.h  GarbageCollector.h  Stoppable.h  UUID.h  VSPtr.h  library.h
Server/: index.js  package-lock.json  package.json
Server/conections/: JoseMendoza.json  JoseMendozaMata.json
Server/public/: index.html
docs/: index.html
docs/html/: CountVSPtrs_8h_source.html  GarbageCollector_8h_source.html  Stoppable_8h_source.html  classCountVSPtrs-members.html  classCountVSPtrs.html  classGarbageCollector-members.html  classGarbageCollector__coll__graph.md5  classGarbageCollector__inherit__graph.md5  classStoppable__inherit__graph.map  classSuperVSPtr.html  classSuperVSPtr__inherit__graph.map  classSuperVSPtr__inherit__graph.md5  classVSPtr-members.html  classes.html  index.html  (+15 more)
html/: UUID_8h_source.html  VSPtr_8h_source.html  annotated.html  classGarbageCollector.html  classGarbageCollector__inherit__graph.map  classStoppable-members.html  classStoppable.html  classStoppable__inherit__graph.md5  classSuperVSPtr-members.html  classUUID-members.html  classUUID.html  classVSPtr.html  files.html  functions_func.html  inherit_graph_0.md5  inherit_graph_2.map  inherits.html
src/: CountVSPtrs.cpp  CountVSPtrs.h  GarbageCollector.cpp  GarbageCollector.h  Stoppable.cpp  Stoppable.h  UUID.cpp  UUID.h  VSPtr.cpp  VSPtr.h  library.cpp  library.h
(+15 files in other folders)
